// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Execution table renders a list of executions 1`] = `
<ExecutionTable
  data={
    Object {
      "data": Object {
        "headers": Array [
          Object {
            "executedModelName": "LoanEligibility",
            "executionDate": "2020-06-01T12:33:57+0000",
            "executionId": "b2b0ed8d-c1e2-46b5-ad4f-3ac54ff4beae",
            "executionSucceeded": true,
            "executionType": "DECISION",
            "executorName": "testUser",
          },
          Object {
            "executedModelName": "LoanEligibility",
            "executionDate": "2020-06-01T12:33:57+0000",
            "executionId": "b2b0ed8d-c1e2-46b5-ad4f-3hd83kidi4u74",
            "executionSucceeded": true,
            "executionType": "DECISION",
            "executorName": "testUser",
          },
        ],
        "limit": 10,
        "offset": 0,
        "total": 2,
      },
      "status": 3,
    }
  }
/>
`;

exports[`Execution table renders a loading error message when data loading fails 1`] = `
<ExecutionTable
  data={
    Object {
      "error": Object {
        "message": "",
        "name": "",
      },
      "status": 2,
    }
  }
/>
`;

exports[`Execution table renders loading skeletons when the data is loading 1`] = `
<ExecutionTable
  data={
    Object {
      "status": 1,
    }
  }
/>
`;

exports[`Execution table renders loading skeletons when the data is not yet fetching 1`] = `
<ExecutionTable
  data={
    Object {
      "status": 0,
    }
  }
/>
`;

exports[`Execution table renders no result message if no executions are found 1`] = `
<ExecutionTable
  data={
    Object {
      "data": Object {
        "headers": Array [],
        "limit": 10,
        "offset": 0,
        "total": 0,
      },
      "status": 3,
    }
  }
/>
`;
